# cxx-project

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  README.md
src/include/: README.md
tests/: CMakeLists.txt  catch.h  main.cc
